# turglem-client

./: .gitignore  CMakeLists.txt  INSTALL  README  grammemer.rb  ru-grammem.rb  ru-string.rb  test_01.c  test_02.cpp  turglem-client.c
